--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,8 +99,8 @@ input, select, textarea {
 
 	body, input, textarea, select {
 		font-family: 'Montserrat';
-		font-weight: 300;
-		color: #888;
+		font-weight: 320;
+		color: #021674;
 		line-height: 1.65em;
 		font-size: 15pt;
 	}
@@ -108,7 +108,7 @@ input, select, textarea {
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: 600;
 		text-transform: uppercase;
-		color: rgb(2, 22, 116);
+		color: #021674;
 	}
 
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -2082,7 +2082,7 @@ input, select, textarea {
 	#features {
 		position: relative;
 		overflow: hidden;
-		background-image: url("paper.gif");
+		background-image: url("/images/florian-olivo-4hbJ-eymZ1o-unsplash.jpg");
 		background-color: #fff4dc;
 		text-align: center;
 		padding: 6em 0;
